snapshots/truth__parse__abi__tests__attr_only_comma.snap
---
source: src/parse/abi.rs
expression: "expect_parse_error(\"unexpected\", r##\"a(bs=,)\"##).trim()"
---
error: unexpected token `,`
  ┌─ <input>:1:6
  │
1 │ a(bs=,)
  │      ^ unexpected token
  │
  = 
    Expected one of "-", INT or STRING
