snapshots/truth__parse__abi__tests__errant_eq.snap
---
source: src/parse/abi.rs
expression: "expect_parse_error(\"unexpected\", r##\"=\"##).trim()"
---
error: unexpected '='
  ┌─ <input>:1:1
  │
1 │ =
  │ ^
