snapshots/truth__parse__abi__tests__initial_paren.snap
---
source: src/parse/abi.rs
expression: "expect_parse_error(\"unexpected\", r##\"()\"##).trim()"
---
error: unexpected '('
  ┌─ <input>:1:1
  │
1 │ ()
  │ ^
